tests/semantic/pass/var-5.tiger
let
	var a := 0
in
	a := 0
end
