tests/semantic/fail/record-3.tiger
let
	type a = {a : int}
	var a := a {a = 0, b = 0}
in
end
